@@ -176,23 +176,26 @@ AC_ARG_ENABLE([video],
   [],
   [enable_video="yes"])
 
-with_video="no"
-AS_IF([test "x$enable_video" != "xno"],
-  [AS_IF([test "x$win32" = "xno"],
-    [AC_CHECK_HEADERS([linux/videodev.h], [with_video="v4l1"],
-      [AC_MSG_FAILURE([test for video support failed!
+have_v4l1="no"
+have_v4l2="no"
+AS_IF([test "x$enable_video" = "xno"],
+  [],
+  [test "x$win32" = "xno"],
+  [AC_CHECK_HEADERS([linux/videodev.h], [have_v4l1="yes"])
+   AC_CHECK_HEADERS([linux/videodev2.h], [have_v4l2="yes"])
+   AS_IF([test "x$have_v4l2" = "xno" && test "x$have_v4l1" = "xno"],
+     [AC_MSG_FAILURE([test for video support failed!
 rebuild your kernel to include video4linux support or
-configure --disable-video to skip building video support.])])
-       AC_CHECK_HEADERS([linux/videodev2.h], [with_video="v4l2"],
-         [AC_MSG_WARN([v4l2 API not detected, upgrade your kernel!])])],
-    [AC_CHECK_HEADERS([vfw.h], [with_video="vfw"],
-      [AC_MSG_FAILURE([test for VfW video support failed!
-configure --disable-video to skip building vidoe support.])])])
-])
+configure --disable-video to skip building video support.])],
+     [test "x$have_v4l2" = "xno"],
+     [AC_MSG_WARN([v4l2 API not detected, upgrade your kernel!])])],
+  [AC_CHECK_HEADERS([vfw.h], [with_video="vfw"],
+    [AC_MSG_FAILURE([test for VfW video support failed!
+configure --disable-video to skip building video support.])])])
+
 AM_CONDITIONAL([HAVE_VIDEO], [test "x$enable_video" != "xno"])
-AM_CONDITIONAL([HAVE_V4L1],
-  [test "x$with_video" = "xv4l1" || test "x$with_video" = "xv4l2"])
-AM_CONDITIONAL([HAVE_V4L2], [test "x$with_video" = "xv4l2"])
+AM_CONDITIONAL([HAVE_V4L1], [test "x$have_v4l1" != "xno"])
+AM_CONDITIONAL([HAVE_V4L2], [test "x$have_v4l2" != "xno"])
 
 dnl X
 AC_ARG_VAR([XSHM_LIBS], [linker flags for X shared memory extension])
@@ -509,7 +512,8 @@ dnl header files
 dnl FIXME switches for shm, mmap
 AC_HEADER_ASSERT
 AC_CHECK_HEADERS([errno.h fcntl.h features.h inttypes.h stdlib.h string.h \
-  unistd.h sys/ioctl.h sys/time.h sys/times.h sys/ipc.h sys/shm.h sys/mman.h])
+  unistd.h sys/types.h sys/stat.h sys/ioctl.h sys/time.h sys/times.h \
+  sys/ipc.h sys/shm.h sys/mman.h])
 
 dnl types
 
